header logo size and gap between profile and cards in mobile view fixed
gap between the profile and cards in mobile view should be 36px, on desktop view it is 51px.
header size fixed when in mobile view

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -13,6 +13,8 @@
 
 @media screen and (max-width: 636px) {
   .header__logo {
+    width: 126px;
+    height: 24px;
     padding-bottom: 32px;
     margin-left: 27px;
   }
